[package]
name = "dg_fast_farmer"
version = "1.0.3"
edition = "2021"
authors = ["James Hoerr"]
description = "A lite farmer for the Chia Blockchain."
license = "Apache-2.0"
homepage = "https://github.com/GalactechsLLC/dg_fast_farmer"
repository = "https://github.com/GalactechsLLC/dg_fast_farmer"

[[bin]]
name="ff"
path="src/main.rs"

[profile.release]
codegen-units = 1
lto = "fat"

[dependencies]
actix-web = "4.5.1"
async-trait = "0.1.79"
bip39 = {version= "2.0.0", features=["rand"] }
blst = "0.3.11"
bytefmt = "0.1.7"
clap = { version = "4.5.4", features = ["derive"] }
chrono = "0.4.37"
crossterm = "0.27.0"
dialoguer = "0.11.0"
dg_xch_cli = { path="./dg_xch_utils/cli", version="2.0.3" }
dg_xch_clients = { path="./dg_xch_utils/clients", version="2.0.3", features = ["metrics"] }
dg_xch_core = { path="./dg_xch_utils/core", version = "2.0.3", default-features = false, features = ["metrics"] }
dg_xch_keys = { path="./dg_xch_utils/keys", version="2.0.3" }
dg_xch_macros = { path="./dg_xch_utils/macros", version="2.0.3" }
dg_xch_pos = { path="./dg_xch_utils/proof_of_space", version="2.0.3" }
dg_xch_puzzles = { path="./dg_xch_utils/puzzles", version="2.0.3" }
dg_xch_serialize = { path="./dg_xch_utils/serialize", version="2.0.3" }
dg_xch_servers = { path="./dg_xch_utils/servers", version="2.0.3", features = ["metrics"] }
futures-util = "0.3.30"
hex = "0.4.3"
home = "0.5.9"
libc = "0.2.153"
log = "0.4.21"
notify = "6.1.1"
num-bigint = "0.4.4"
once_cell = "1.19.0"
prometheus = {version="0.13.3", features=["protobuf"]}
protobuf = "2.27.1"
rand = { version = "0.8.5", features = [] }
ratatui = "0.26.1"
rayon = "1.10.0"
reqwest = {version="0.12.3", default-features = false, features =["rustls-tls", "json"]}
serde = {version="1.0.197", features = ["derive"]}
serde_json = "1.0.115"
serde_yaml = "0.9.33"
simple_logger = "4.3.3"
sysinfo = "0.30.9"
tokio = {version = "1.37.0", features=["rt-multi-thread", "sync", "signal", "macros", "process", "time", "fs", "net"]}
tokio-tungstenite = {version = "0.20.1", features = ["rustls-tls-webpki-roots", "rustls"] }
tui-logger = {version = "0.11.0", default-features = false}
uuid = {version="1.8.0", features=["v4"]}
num-integer = "0.1.46"
regex = "1.10.4"

[build-dependencies]
bindgen = "0.69.4"