[package]
name = "dg_fast_farmer"
version = "2.2.0"
edition = "2024"
authors = ["James Hoerr"]
description = "A lite farmer for the Chia Blockchain."
license = "Apache-2.0"
homepage = "https://github.com/GalactechsLLC/dg_fast_farmer"
repository = "https://github.com/GalactechsLLC/dg_fast_farmer"

[[bin]]
name="ff"
path="src/main.rs"

[profile.release]
codegen-units = 1
lto = "fat"

[dependencies]
async-trait = "0.1.89"
bip39 = {version= "2.2.0", features=["rand"] }
blst = "0.3.15"
bytefmt = "0.1.7"
clap = { version = "4.5.45", features = ["derive"] }
crossterm = "0.29.0"
dialoguer = "0.11.0"
dg_xch_cli = { path="./dg_xch_utils/cli", version="2.2.0" }
dg_xch_clients = { path="./dg_xch_utils/clients", version="2.2.0", features = ["metrics"] }
dg_xch_core = { path="./dg_xch_utils/core", version = "2.2.0", default-features = false, features = ["metrics"] }
dg_xch_keys = { path="./dg_xch_utils/keys", version="2.2.0" }
dg_logger = { path="./dg_xch_utils/logging", version="2.2.0" }
dg_xch_pos = { path="./dg_xch_utils/proof_of_space", version="2.2.0" }
dg_xch_puzzles = { path="./dg_xch_utils/puzzles", version="2.2.0" }
dg_xch_serialize = { path="./dg_xch_utils/serialize", version="2.2.0" }
futures-util = "0.3.31"
hex = "0.4.3"
home = "0.5.11"
log = "0.4.27"
once_cell = "1.21.3"
portfu = { version = "1.3.3" }
prometheus = {version="0.14.0", features=["protobuf"]}
rand = "0.9.2"
ratatui = "0.29.0"
serde = {version="1.0.219", features = ["derive"]}
serde_yaml = "0.9.33"
sysinfo = "0.37.0"
time = "0.3.41"
tokio = {version = "1.47.1", features=["rt-multi-thread", "sync", "signal", "macros", "process", "time", "fs", "net"]}
tokio-tungstenite = {version = "0.26.2", features = ["rustls", "rustls-tls-webpki-roots"] }
tui-logger = {version = "0.17.3", default-features = false}
regex = "1.11.1"
rustls = {version = "0.23.31" }
uuid = {version="1.18.0", features=["v4"]}

#Needed for Building 3rd Party Harvesters
#[build-dependencies]
#bindgen = "0.71.1"